[tool.poetry]
name = "craftmanship"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["zolizoli <zoltan.varju@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zolizoli/craftmanship"
repository = "https://github.com/zolizoli/craftmanship"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
